# code_farmer

./: .env.example  .gitignore  TASKS.md  index.html  keyboard-farm-claude-code-spec.md  keyboard-farm-spec.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
competitor/: README.md
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accessibility.rs  commands.rs  input_listener.rs  lib.rs  main.rs  persistence.rs
src-tauri/src/input_listener/: mod.rs
src-tauri/src/input_listener/platform/: macos.rs  mod.rs  stub.rs  windows.rs
src/bridge/: tauriBridge.ts
src/components/: AccessibilityGuide.vue  AnimalPanel.vue  DragHandle.vue  FloatingStatus.vue  FloatingTabs.vue  KeyboardFarm.vue  ShopPanel.vue  StatsPanel.vue
src/config/: animals.ts  asset-keys.ts  constants.ts  crops.ts  keyboard-layout.ts  keyboardLayout.ts
src/objects/: IslandRenderer.ts  KeyPlot.ts
src/scenes/: BootScene.ts  FarmScene.ts  PreloadScene.ts  ShopScene.ts  StatsScene.ts
src/store/: gameStore.ts
src/systems/: FarmManager.ts  InputBridge.ts
src/ui/: HUD.ts  Toast.ts
tools/art-gen/: cli.ts  config.ts  generate.ts  manifest.ts  postprocess.ts
